selfhost/test/typechecker/funcdecl/error_self_standalone.abra
func foo(self, a: Int): Int = a